--- a/index.html
+++ b/index.html
@@ -1,62 +1,86 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9RNWKYWZWC"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-9RNWKYWZWC');
-</script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Berkant İşkil | Kişisel Web Site</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Berkant İşkil | Kişisel Web Sitesi</title>
+  <meta name="description" content="Berkant İşkil kişisel web sitesi. Hakkımda, hedeflerim ve iletişim bilgileri." />
   <style>
-    /* Temel stil */
-    body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #0f172a, #1e293b);
-      color: #f1f5f9;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      text-align: center;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-    }
-    p {
-      font-size: 1.2rem;
-      opacity: 0.8;
-      margin-bottom: 2rem;
-    }
-    a {
-      color: #38bdf8;
-      text-decoration: none;
-      margin: 0 0.5rem;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .links {
-      margin-top: 1rem;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif; }
+    body { background: #0f172a; color: #e5e7eb; line-height: 1.6; }
+    header { padding: 60px 20px; text-align: center; background: linear-gradient(135deg, #1e293b, #020617); }
+    header h1 { font-size: 2.8rem; margin-bottom: 10px; }
+    header p { font-size: 1.2rem; color: #94a3b8; }
+    section { max-width: 900px; margin: 60px auto; padding: 0 20px; }
+    h2 { font-size: 2rem; margin-bottom: 20px; border-bottom: 2px solid #334155; display: inline-block; padding-bottom: 5px; }
+    .card { background: #020617; padding: 25px; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); margin-bottom: 30px; }
+    footer { text-align: center; padding: 30px 20px; background: #020617; color: #64748b; }
+    a { color: #38bdf8; text-decoration: none; }
+    a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
+
+<header>
   <h1>Berkant İşkil</h1>
-  <p>Founder · Vision-Driven Entrepreneur</p>
-  <div class="links">
-    <a href="https://instagram.com" target="_blank">Instagram</a>
-    <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-    <a href="https://github.com" target="_blank">GitHub</a>
+  <p>Kişisel Web Sitesi</p>
+</header>
+
+<section>
+  <h2>Hakkımda</h2>
+  <div class="card">
+    <p>
+      Ben Berkant İşkil. Hayata analitik bakan, kendini geliştirmeyi hedefleyen ve
+      deneyimlerinden ders çıkaran biriyim. Disiplin, irade ve sürekliliğin başarıyı
+      getirdiğine inanıyorum.
+    </p>
   </div>
+</section>
+
+<section>
+  <h2>Hedeflerim</h2>
+  <div class="card">
+    <ul>
+      <li>Fiziksel ve zihinsel olarak en iyi versiyonuma ulaşmak</li>
+      <li>Kalıcı ve sağlam bir kariyer inşa etmek</li>
+      <li>Hayatta doğru insanlarla doğru yolları yürümek</li>
+    </ul>
+  </div>
+</section>
+
+<section>
+  <h2>İletişim</h2>
+  <div class="card">
+    <p>Benimle iletişime geçmek için:</p>
+    <p>Email: <a href="mailto:info@berkantiskil.com">info@berkantiskil.com</a></p>
+    <p>GitHub: <a href="#">github.com/berkantiskil</a></p>
+  </div>
+</section>
+
+<footer>
+  <p>© 2026 Berkant İşkil. Tüm hakları saklıdır.</p>
+</footer>
+
+
+
+  <!-- Yönettiğim Markalar -->
+  <section class="brands">
+    <h2>Yönettiğim Markalar</h2>
+    <div class="brand-list">
+      <div class="brand-card">
+        <img src="logo1.png" alt="Marka 1 Logo">
+        <span>Marka Adı 1</span>
+      </div>
+      <div class="brand-card">
+        <img src="logo2.png" alt="Marka 2 Logo">
+        <span>Marka Adı 2</span>
+      </div>
+      <div class="brand-card">
+        <img src="logo3.png" alt="Marka 3 Logo">
+        <span>Marka Adı 3</span>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
