--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
     <h2>Yönettiğim Markalar</h2>
     <div class="brand-list">
       <div class="brand-card">
-        <img src="logo1.png" alt="Marka 1 Logo">
+        <img src="marka1.jpg" alt="Marka 1 Logo">
         <span>Marka Adı 1</span>
       </div>
       <div class="brand-card">
-        <img src="logo2.png" alt="Marka 2 Logo">
+        <img src="marka2.jpg" alt="Marka 2 Logo">
         <span>Marka Adı 2</span>
       </div>
       <div class="brand-card">
-        <img src="logo3.png" alt="Marka 3 Logo">
+        <img src="marka3.jpg" alt="Marka 3 Logo">
         <span>Marka Adı 3</span>
       </div>
     </div>
