--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
   <h2>Hakkımda</h2>
   <div class="card">
     <p>
-      Ben Berkant İşkil. Hayata analitik bakan, kendini geliştirmeyi hedefleyen ve
-      deneyimlerinden ders çıkaran biriyim. Disiplin, irade ve sürekliliğin başarıyı
-      getirdiğine inanıyorum.
+     I am an entrepreneur focused on building global brands from the ground up.
+My journey is defined by resilience, strategic thinking, and a clear long-term vision. I don’t follow trends — I build systems, brands, and structures designed to scale sustainably in competitive markets.
+
+I specialize in growth strategy, brand positioning, and execution-driven leadership. Every brand I create is rooted in discipline, data, and purpose, with a strong emphasis on long-term value rather than short-term wins.
+
+For me, entrepreneurship is not a title — it is a responsibility to create, to lead, and to grow through challenge.
     </p>
   </div>
 </section>
@@ -41,9 +44,7 @@
   <h2>Hedeflerim</h2>
   <div class="card">
     <ul>
-      <li>Fiziksel ve zihinsel olarak en iyi versiyonuma ulaşmak</li>
-      <li>Kalıcı ve sağlam bir kariyer inşa etmek</li>
-      <li>Hayatta doğru insanlarla doğru yolları yürümek</li>
+      <li>Marks that time cannot wear away./li>
     </ul>
   </div>
 </section>
