--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ For me, entrepreneurship is not a title — it is a responsibility to create, to
   <h2>Hedeflerim</h2>
   <div class="card">
     <ul>
-      <li>Marks that time cannot wear away./li>
+      <li>Marks that time cannot wear away.
     </ul>
   </div>
 </section>
