--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <h2>Hakkımda</h2>
   <div class="card">
     <p>
-     I am an entrepreneur focused on building global brands from the ground up.
+  I am an entrepreneur focused on building global brands from the ground up.
 My journey is defined by resilience, strategic thinking, and a clear long-term vision. I don’t follow trends — I build systems, brands, and structures designed to scale sustainably in competitive markets.
 
 I specialize in growth strategy, brand positioning, and execution-driven leadership. Every brand I create is rooted in discipline, data, and purpose, with a strong emphasis on long-term value rather than short-term wins.
@@ -44,7 +44,7 @@ For me, entrepreneurship is not a title — it is a responsibility to create, to
   <h2>Hedeflerim</h2>
   <div class="card">
     <ul>
-      <li>Marks that time cannot wear away.
+      <li>Marks that time cannot wear away.</li>
     </ul>
   </div>
 </section>
@@ -57,12 +57,6 @@ For me, entrepreneurship is not a title — it is a responsibility to create, to
     <p>GitHub: <a href="#">github.com/berkantiskil</a></p>
   </div>
 </section>
-
-<footer>
-  <p>© 2026 Berkant İşkil. Tüm hakları saklıdır.</p>
-</footer>
-
-
 
   <!-- Yönettiğim Markalar -->
   <section class="brands">
@@ -78,6 +72,31 @@ For me, entrepreneurship is not a title — it is a responsibility to create, to
       </div>
       <div class="brand-card">
         <img src="marka3.jpg" alt="Marka 3 Logo">
+        <span>Marka Adı 3</span>
+      </div>
+    </div>
+  </section>
+
+<footer>
+  <p>© 2026 Berkant İşkil. Tüm hakları saklıdır.</p>
+</footer>
+
+
+
+  <!-- Yönettiğim Markalar -->
+  <section class="brands">
+    <h2>Yönettiğim Markalar</h2>
+    <div class="brand-list">
+      <div class="brand-card">
+        <img src="logo1.png" alt="Marka 1 Logo">
+        <span>Marka Adı 1</span>
+      </div>
+      <div class="brand-card">
+        <img src="logo2.png" alt="Marka 2 Logo">
+        <span>Marka Adı 2</span>
+      </div>
+      <div class="brand-card">
+        <img src="logo3.png" alt="Marka 3 Logo">
         <span>Marka Adı 3</span>
       </div>
     </div>
