--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@ For me, entrepreneurship is not a title — it is a responsibility to create, to
     <h2>Yönettiğim Markalar</h2>
     <div class="brand-list">
       <div class="brand-card">
-        <img src="marka1.jpg" alt="Marka 1 Logo">
+        <img src="marka1.jpeg.jpg" alt="Marka 1 Logo">
         <span>Marka Adı 1</span>
       </div>
       <div class="brand-card">
-        <img src="marka2.jpg" alt="Marka 2 Logo">
+        <img src="marka2.jpeg.jpg" alt="Marka 2 Logo">
         <span>Marka Adı 2</span>
       </div>
       <div class="brand-card">
