--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@ For me, entrepreneurship is not a title — it is a responsibility to create, to
     <h2>Yönettiğim Markalar</h2>
     <div class="brand-list">
       <div class="brand-card">
-        <img src="marka1.jpeg.jpg" alt="Marka 1 Logo">
+        <img src="marka1.png" alt="Marka 1 Logo">
         <span>Marka Adı 1</span>
       </div>
       <div class="brand-card">
-        <img src="marka2.jpeg.jpg" alt="Marka 2 Logo">
+        <img src="marka2.png" alt="Marka 2 Logo">
         <span>Marka Adı 2</span>
       </div>
       <div class="brand-card">
-        <img src="marka3.jpg" alt="Marka 3 Logo">
+        <img src="marka3.png" alt="Marka 3 Logo">
         <span>Marka Adı 3</span>
       </div>
     </div>
