--- a/index.html
+++ b/index.html
@@ -63,16 +63,12 @@ For me, entrepreneurship is not a title — it is a responsibility to create, to
     <h2>Yönettiğim Markalar</h2>
     <div class="brand-list">
       <div class="brand-card">
-        <img src="marka1.png" alt="Marka 1 Logo">
+        <img src="marka1.png" alt="SWAK">
         <span>Marka Adı 1</span>
       </div>
       <div class="brand-card">
-        <img src="marka2.png" alt="Marka 2 Logo">
+        <img src="marka2.png" alt="MYORTİCA">
         <span>Marka Adı 2</span>
-      </div>
-      <div class="brand-card">
-        <img src="marka3.png" alt="Marka 3 Logo">
-        <span>Marka Adı 3</span>
       </div>
     </div>
   </section>
