--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ For me, entrepreneurship is not a title — it is a responsibility to create, to
     <div class="brand-list">
       <div class="brand-card">
         <img src="marka1.png" alt="SWAK">
-        <span>Marka Adı 1</span>
+        <span>SWAK</span>
       </div>
       <div class="brand-card">
         <img src="marka2.png" alt="MYORTİCA">
-        <span>Marka Adı 2</span>
+        <span>MYORTİCA</span>
       </div>
     </div>
   </section>
